VERSION 2.02
----------------
Bhaalspawn Trilogy

Completely re-created for EET
Adapted to new journal and worldmap capabilities
Optimised use of new game resources
Sandrah's personal items restricted
Items adjusted to EET
Sandrah's spells revised

Added Sandrah Siege of Dragonspear content
New BG1 to BG2 transition
Solve SoD murder case and re-open Baldur's Gate City in BG2

Consistent Drizzt portrait for all Sandrah/Drizzt(s) crossmod
Revised dependecies on other mega mods
Kit implementation refined
Improved Jen'lig

Removed Ajantis Crossmod
Removed RE Crossmod

Added Neera, Dorn, Rasaad, Baeloth, Hexxat Crossmod
Added Karlini rescue case
Neera can get planar sphere if PC not mage
Hexxat can get thieves guild if PC not thief
Dark Horizon Extension adapted
IWD I Sandrah content added
IWD HoW additional quest and content

____________________________________________
Return to Faerun

Transition from ToB to RtF renewed
Restored all NPC bios if game ends at ToB by player choice
Adapted travelling system to new worldmap capabilities 
Added journal entries for *new generation* NPC personal quests
Constant removal of Bhaal abilities from PC (slayer and pocket plane)

Refined Cloakwood episode with Cynthaya and Faldorn
Added Cespenar to Waterdeep

Option to continue with Time of Troubles Revisited

_____________________________________________
Time of Troubles Revisited

Main story contents developped